# sekam2

./: .env.sample  .gitignore  License  Readme.md  bot.py  config.py  fileutil.py  main.py  pyproject.toml
.github/workflows/: ruff.yaml
commands/: __init__.py  admin.py  graph.py  misc.py  morpheme.py  ranking.py  reaction.py  settings.py  sora.py  test.py
commands/sora_components/: __init__.py  modals.py  utils.py  views.py
core/: __init__.py  log.py  modals.py  zichi.py
events/: __init__.py  guild.py  interaction.py  member.py  ready.py
utils/: __init__.py  cache.py  emoji.py
