[project]
name = "sekam2"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "aiodns>=3.5.0",
    "aiohttp>=3.12.15",
    "discord-py>=2.6.3",
    "matplotlib>=3.10.6",
    "mysqlclient>=2.2.7",
    "pillow>=11.3.0",
    "pilmoji>=2.0.4",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.13.3",
]
